--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 	<title>Hai! 我是汪浩宇</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/mycss.css">
-
 </head>
 <body>
-
-	
 	<!-- 顶部导航栏 -->
-	<div class="navbar navbar-fixed-top top-navbar">
+	<div class="navbar top-navbar bg-black">
 		<div class="container-fluid">
 			<!-- brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
@@ -39,7 +36,7 @@
 	</div>
 
 <!-- section:page's header start -->
-	<header id="head">
+	<header id="head" class="bg-white">
 		<div class="container-fluid">
 			<!-- 我的头像 -->
 			<div class="row header-wrapper">
@@ -48,7 +45,8 @@
 				</div>
 				<div class="col-md-4 otherinfo col-sm-12 text-center">
 					<h2>嗨！我是汪浩宇</h2>
-					<p>WEB前端开发工程师</p><hr />
+					<p>WEB前端开发工程师</p>
+					<hr />
 					<div class="down-profile">
 						<a href="#">下载我的简历</a>  
 					</div>	
@@ -62,41 +60,39 @@
 <!-- section:page's main content start -->
 
 	<!--section:About ME start-->
-	<section id="aboutMe" class="section" data-animate="0">
+	<section id="aboutMe" class="section bg-black" data-animate="0">
 		<div class="container-fluid">  
 			<div class="row">
 				<!-- Introduce myself -->
-				<div class="col-md-6 col-sm-12">
+				<div class="col-md-6 col-sm-12 color-white">
 					<div class="about-thumb">
 						<div class="section-title">
-							<h2>这就是我</h2>
-							<h4>this is a kiss chance</h4>
+							<h2 style="color: white;">这就是我</h2>
+							<h4></h4>
 						</div>
-						<di
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<div class="screen-title-line"></div>
+						<div class="section-content">
+							<p>嗨！我是汪浩宇。感谢您通过浏览该页面来了解我。</p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-3 col-sm-6">
+				<!-- <div class="col-md-3 col-sm-6">
 					<div class="background-img about-img"></div>
-				</div>
+				</div> -->
 
 				
-				<div class="col-md-3 col-sm-6 bg-yellow">
+				<div class="col-md-6 col-sm-12 bg-white color-black">
 					<div class="wish-thumb">
 						<div class="section-title">
 							<h2>Hope !</h2>
 							<h4>书山有路勤为径，学海无涯苦作舟</h4>
 						</div>
-						<div>
+						<div class="screen-title-line"></div>
+						<div class="section-content">
 							<p>第一阶段：踏踏实实的做好基础工作，将前端开发的相关技术掌握扎实，成为一个优秀的前端工程师</p>
-							<p>第二阶段：努力朝向技术支持或者是具有管理职能的技术型人才。</p>
+							<p>第二阶段：朝向技术支持或者是具有管理职能的技术型人才发展。</p>
 						</div>
 					</div>
 				</div>
@@ -105,16 +101,12 @@
 	</section>
 
 	<!--section:skill display  start -->
-	<section id="skills" data-animate="0">
+	<section id="skills" class="bg-white" data-animate="0">
 		<div class="container-fluid">
-			<div class="row">
-				<div class="col-md-12">
-					<div class="content-title">
-						<h2 class="text-center">技能掌握</h2>
-						<p class="text-center">HTML、CSS、JAVASCRIPT、VUE、ANGULAR</p>
-					</div>
-				</div>
+			<div class="content-title">
+				<h2 class="text-center color-black">技能掌握</h2>
 			</div>
+			<div class="screen-title-line s2-title-line"></div>
 			<div class="row sec-content">
 				<div class="col-md-3 col-sm-6 col-sl-12 skill-panel" id="s1">
 					<div class="circle">
@@ -124,9 +116,9 @@
 						<div class="pie_right">
 							<div class="right"></div>
 						</div>
-						<div class="mark"><span>30</span>%</div>
+						<div class="mark color-black"><span>30</span>%</div>
 					</div>
-					<p class="skill-tip">HTML5/CSS3</p>
+					<p class="skill-tip color-black">HTML5/CSS3</p>
 				</div>
 				<div class="col-md-3 col-sm-6 col-sl-12 skill-panel" id="s2">
 					<div class="circle">
@@ -136,9 +128,9 @@
 						<div class="pie_right">
 							<div class="right"></div>
 						</div>
-						<div class="mark"><span>80</span>%</div>
+						<div class="mark color-black"><span>80</span>%</div>
 					</div>
-					<p class="skill-tip">javascript</p>
+					<p class="skill-tip color-black">javascript</p>
 				</div>
 				<div class="col-md-3 col-sm-6 col-sl-12 skill-panel" id="s3">
 					<div class="circle">
@@ -148,9 +140,9 @@
 						<div class="pie_right">
 							<div class="right"></div>
 						</div>
-						<div class="mark"><span>60</span>%</div>
+						<div class="mark color-black"><span>60</span>%</div>
 					</div>
-					<p class="skill-tip">angularJS/Ionic</p>
+					<p class="skill-tip color-black">vue</p>
 				</div>
 				<div class="col-md-3 col-sm-6 col-sl-12 skill-panel" id="s4">
 					<div class="circle">
@@ -160,9 +152,9 @@
 						<div class="pie_right">
 							<div class="right"></div>
 						</div>
-						<div class="mark"><span>80</span>%</div>
+						<div class="mark color-black"><span>80</span>%</div>
 					</div>
-					<p class="skill-tip">Jquery</p>
+					<p class="skill-tip color-black">Jquery</p>
 				</div>
 			</div>
 		</div>
@@ -178,11 +170,12 @@
 				<div class="col-md-6">
 					<div class="background-img education-img"></div>
 				</div>
-				<div class="col-md-6 col-sm-12 bg-orange">
-					<div class="education-thumb color-white">
+				<div class="col-md-6 col-sm-12 bg-white">
+					<div class="education-thumb color-black">
 						<div class="section-title">
 							<h2>教育背景</h2>
 						</div>
+						<div class="screen-title-line"></div>
 						<div class="media">
 							<div class="media-left">
 								<span class="media-object glyphicon glyphicon-tags"></span>
@@ -208,12 +201,12 @@
 
 		<!--section: personal work experience start -->
 			<div class="row">	
-				<div class="col-md-6 col-sm-12 bg-yellow">
-					<div class="experience-thumb color-white">
+				<div class="col-md-6 col-sm-12 bg-white">
+					<div class="experience-thumb color-black">
 						<div class="section-title">
 							<h2>工作经历</h2>
 						</div>
-
+						<div class="screen-title-line"></div>
 						<div class="media">
 							<div class="media-left">
 								<span class="media-object glyphicon glyphicon-tags"></span>
@@ -243,12 +236,12 @@
 	</section>
 
 	<!--section:projects start -->
-	<section id="works" data-animate="0">
+	<section id="works" class="bg-white" data-animate="0">
 		<div class="container-fluid">
 			<div class="content-title">
-				<h2 class="text-center">项目经历</h2>
-				<p class="text-center">Apps and Webs</p>
+				<h2 class="text-center color-black">个人项目</h2>
 			</div>
+			<div class="screen-title-line s4-title-line"></div>
 			<div class="row sec-content">
 				<div class="col-md-3 col-sm-12">
 					<div class="demo thumbnail" data-toggle="modal" data-target="#myModal">
@@ -284,7 +277,7 @@
 					<div class="demo thumbnail" data-toggle="modal" data-target="#myModal">
 						<div class="scanView">
 							<img src="resource/apple.png" class="img-responsive img-thumbnail">
-						</div>
+						</div>	
 						<div class="describle">
 							<h4 class="text-center">个人博客</h4>
 						</div>
@@ -298,11 +291,12 @@
 
 <!-- concact me  start -->
 
-	<section id="contact" data-animate="0">
+	<section id="contact" class="bg-white" data-animate="0">
 		<div class="container-fluid">
 			<div class="content-title">
-				<h2 class="text-center">联系方式</h2>
+				<h2 class="text-center color-black">一键扫码 方便联系</h2>
 			</div>
+			<div class="screen-title-line s5-title-line"></div>
 			<div class="row">
 				<div class="col-md-12">
 					<div class="contact-thumb">
@@ -349,7 +343,7 @@
 	</section>
 	
 	<!-- 网页底部 --> 
-	<footer id="foot">
+	<footer id="foot" class="bg-white">
 		<div class="container-fluid">
 			<p class="text-center">this page is designed by 汪浩宇</p>
 		</div>
